[package]
name = "podbringer"
version = "0.1.0"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
description = "Web services to provide an podcast (RSS) interface for Mixcloud"
#readme = "README.md"
license = "MIT"

[dependencies]
cached = "0.34.0"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rss = "2.0.1"
tempfile = "3"
tokio = { version = "1.6.1", features = ["process"] }
