[package]
name = "podbringer"
version = "0.1.0"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
description = "Web service that provides podcasts for services that don't offer them (anymore)"
readme = "README.md"
license = "MIT"

[dependencies]
cached = "0.34.0"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rss = "2.0.1"
tempfile = "3"
tokio = { version = "1.6.1", features = ["process"] }

[package.metadata.deb]
maintainer = "Paul van Tilburg <paul@luon.net>"
copyright = "2022, Paul van Tilburg"
depends = "$auto, systemd"
extended-description = """\
Podbringer is a web service that provides podcasts for services that don't
offer them (anymore). It provides a way to get the RSS feed for your podcast
client and it facilites the downloads of the pods (enclosures).
 
It currently only supports [Mixcloud](https://mixcloud.com).
Other back-ends might be added in the future.
"""
section = "net"
priority = "optional"
assets = [
  ["README.md", "usr/share/doc/podbringer/", "664"],
  ["Rocket.toml.example", "/etc/podbringer.toml", "644"],
  ["target/release/podbringer", "usr/sbin/podbringer", "755"]
]
conf-files = [
  "/etc/podbringer.toml"
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "podbringer" }
